--- a/EstructurasDatos/EstructurasDatos/EstructurasDatos.csproj
+++ b/EstructurasDatos/EstructurasDatos/EstructurasDatos.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>EstructurasDatos.Ej_4</StartupObject>
   </PropertyGroup>
 
 </Project>
